# agentleague_aws_hackathone

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  AGENTS.md  LICENSE  README.md  delete_cognito_manual.sh  docker-compose.aws.yml  docker-compose.yml  fluent-bit.conf  justfile  new_design.html  opencode.json  package-lock.json  playwright.config.ts  pyproject.toml  pyrightconfig.json  ruff.toml  run-partial-tests.sh  run-regression-tests.sh  run-tests.sh  test-vscode-setup.js
.claude/: settings.json
backend/: Dockerfile  Dockerfile.agentcore  pyproject.toml  pytest.ini  run_uvicorn.py
backend/app/: __init__.py  dependencies.py  main.py  service_container.py
backend/app/commands/: __init__.py  db_commands.py
backend/app/config/: coin_bundles.json
backend/app/middleware/: logging_middleware.py
backend/app/routers/: __init__.py  agents.py  auth.py  avatars.py  billing.py  dev.py  error_reports.py  game.py  game_chess.py  game_matching.py  game_poker.py  llm_integrations.py  tool_creation_agent.py  tools.py
backend/app/schemas/: __init__.py  agents_metadata.py  avatar.py  billing.py  dev.py  game.py  game_matching.py  health.py  scoring.py  sqs_game_messages.py  state_chat.py  tool_creation_agent.py
backend/app/services/: agent_execution_service.py  agent_iteration_service.py  agent_prompt_service.py  agent_runner_factory.py  agent_service.py  agent_test_service.py  agent_version_service.py  avatar_service.py  chess_analysis_service.py  cognito_service.py  error_report_service.py  game_env_registry.py  game_manager.py  game_matching_service.py  game_schema_helper.py  game_service.py  llm_integration_service.py  long_poll_service.py  mock_cognito_service.py  payment_service.py  poker_analysis_service.py  scoring_service.py  sqs_game_analysis_handler.py  sqs_game_turn_handler.py  stockfish_agent_executor.py  stockfish_service.py  stripe_service.py  tool_agent_response_parser.py  tool_creation_agent_service.py  tool_service.py  user_service.py
backend/app/services/agent_runner/: __init__.py  agentcore_client.py  agentcore_handler.py  direct_agent_runner.py  localhost_agentcore_client.py
backend/app/tasks/: matchmaking_worker.py
backend/app/utils/: encryption.py  fastapi_utils.py
backend/scripts/: create_test_llm_usage.py  recalculate_statistics.py
backend/tests/unit/services/: test_game_manager_timeout.py
libs/common/: .env.development  .env.example  .env.hackathon  .env.local  .env.production  .env.test  pyproject.toml  secrets.example.yaml
libs/common/common/: __init__.py  enums.py  ids.py  model_config.py  types.py
libs/common/common/agents/: __init__.py  models.py  tool_creation_agent.py
libs/common/common/commands/: db_commands.py
libs/common/common/core/: __init__.py  app_error.py  aws_manager.py  base_llm_service.py  config_service.py  deployment.py  encryption_service.py  exceptions.py  guardrails_service.py  jwt_utils.py  lifecycle.py  litellm_schemas.py  litellm_service.py  logging_service.py  mock_jwt_utils.py  request_context.py  service_factory.py  sqs_client.py
libs/common/common/db/: db.py  db_utils.py
libs/common/common/exceptions/: __init__.py  llm_exceptions.py
libs/common/common/logging/: __init__.py  error_notifier.py  setup_logging.py  std_logging_config.py
libs/common/common/models/: __init__.py  provider_models.py
libs/common/common/utils/: __init__.py  json_model.py  msgspec.py  pydantic_timezone.py  template_substitution.py  tsid.py  username_utils.py  utils.py
libs/game/: game_api.py  pyproject.toml
libs/game/chess_game/: __init__.py  chess_api.py  chess_env.py  chess_scoring.py
libs/game/texas_holdem/: __init__.py  texas_holdem_api.py  texas_holdem_env.py  texas_holdem_errors.py  texas_holdem_scoring.py
libs/shared_db/: alembic.ini  pyproject.toml
libs/shared_db/alembic/: env.py  script.py.mako
libs/shared_db/alembic/versions/: 4536a6e293b9_initial_migration_with_all_models.py  add_user_nickname_column.py
libs/shared_db/shared_db/: __init__.py  dependencies.py
libs/shared_db/shared_db/crud/: __init__.py  agent.py  error_report.py  game.py  llm_integration.py  llm_usage.py  payments.py  tool.py  user.py
libs/shared_db/shared_db/db/: __init__.py  create_agnostic_migration.py  create_database.py  decode_tsid.py  generate_cognito_migration.py  generate_migration.py  init_db.py  populate_db.py  populate_test_db.py  reset_database.py  run_migrations.py
libs/shared_db/shared_db/models/: __init__.py  agent.py  enum_utils.py  error_report.py  game.py  game_enums.py  llm_enums.py  llm_integration.py  llm_usage.py  payments.py  tool.py  user.py
libs/shared_db/shared_db/schemas/: __init__.py  agent.py  auth.py  error_report.py  game_environments.py  llm_integration.py  llm_usage.py  payments.py  tool.py  tool_usage.py  user.py
libs/shared_db/shared_db/types/: __init__.py  pydantic_column.py
(+369 files in other folders)
