[project]
name = "common"
description = "Common utilities and shared components"
requires-python = ">=3.13"
version = "0.1.0"
dependencies = [
    "pydantic[email]>=2.11.7",
    "pydantic-extra-types>=2.8.2",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "typer>=0.15.1",
    "boto3>=1.35.84",
    "python-jose[cryptography]>=3.3.0",
    "PyJWT>=2.10.1",
    "requests>=2.32.3",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.2.0",
    "msgspec>=0.19.0",
    "structlog>=25.4.0",
    "aiobotocore>=2.25.0",
    "prometheus-client>=0.23.1",
    "aiohttp>=3.12.15",
    "types-aiobotocore[bedrock-runtime]>=2.15.1",
]

[dependency-groups]
dev = [
    "rich>=13.7.1",
    "types-aiobotocore[essential,secretsmanager,cognito_idp,bedrock-agentcore,bedrock-runtime]>=2.15.1",
    "boto3-stubs[essential]>=1.39.17",
    "mypy-boto3-bedrock-runtime>=1.39.7",
    "mypy-boto3-secretsmanager>=1.39.0",
    "mypy-boto3-bedrock-agentcore>=1.40.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common"]
