[project]
name = "game"
description = "Generic turn-based game engine with Texas Hold'em poker implementation"
requires-python = ">=3.13"
version = "0.1.0"
dependencies = [
    "chess>=1.11.2",
    "pydantic>=2.11.7",
    "typing-extensions>=4.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["game_api", "texas_holdem"]
